# jarvis-holographic-assistant

./: Cargo.toml  README.md  build.rs  requirements.txt
config/: jarvis.toml
src/: amd_gpu.rs  audio_engine.rs  config.rs  gesture_parser.rs  hand_tracker.rs  holographic_ui.rs  main.rs  speech_recognizer.rs  system_monitor.rs  tts_engine.rs  voice_activity_detector.rs  windows_api.rs
