[package]
name = "jarvis"
version = "2.0.0"
edition = "2021"
authors = ["JARVIS Team"]
description = "Holographic AI Assistant for Windows - AMD Ryzen 7 5825U Optimized"
build = "build.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# --- Core ---
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"

# --- UI & Rendering (Windows optimized) ---
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive", "extern_crate_alloc"] }
pollster = "0.3"

# --- Audio ---
cpal = "0.15"
ringbuf = "0.3"

# --- Speech Recognition ---
vosk = "0.3"

# --- Computer Vision (MediaPipe Hands) ---
image = "0.25"
ndarray = { version = "0.15", features = ["rayon"] }

# --- System Monitoring ---
sysinfo = "0.30"

# --- Windows API ---
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "winbase",
    "processthreadsapi",
    "psapi",
    "pdh",
    "shellapi",
    "libloaderapi",
    "mmdeviceapi",
    "endpointvolume",
    "powrprof",
    "dxgi",
    "dxgitype",
    "dxgiformat",
    "d3dcommon",
    "unknwnbase",
    "guiddef",
    "minwindef",
    "winnt",
    "winerror",
    "wtypesbase",
    "oaidl",
    "oleauto",
    "wbemcli",
    "combaseapi",
    "objbase",
    "wtypes",
    "securitybaseapi",
    "handleapi",
    "shtypes",
    "shobjidl_core",
    "objidl",
    "ole2",
] }
